# ffmt

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ffmt.h  ffmt.hxx
src/: ffmt.c  ffmt.internal.h  ffmt.map  ffmt_ez.c  ffmt_formatter.c  ffmt_puts_pad.c  ffmt_u64_to_dec.c  ffmt_u64_to_hex.c  ffmt_write.c  ffmt_write_to_string.c  formatters.c  u64_to_hex.c
test/: c_api.c  dechex.c  format.cxx  smoke.c
tools/: config.local.sh.example  config.sh  lint  run-tests
tools/githooks/: install.sh
tools/githooks/pre-commit/: 01-lint.sh
tools/githooks/pre-push/: 01-run-tests.sh
